Updated package names

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,7 +22,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Piculus.jar
+dist.jar=${dist.dir}/uk.ac.tsl.etherington.piculus.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=piculus.Piculus
+main.class=uk.ac.tsl.etherington.piculus.main.Piculus
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
