--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="uk.ac.tsl.etherington.piculus" default="default" basedir=".">
-    <description>Builds, tests, and runs the project uk.ac.tsl.etherington.piculus.</description>
+<project name="uk.ac.tsl.etherington.genomehelper" default="default" basedir=".">
+    <description>Builds, tests, and runs the project uk.ac.tsl.etherington.genomehelper.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -59,7 +59,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="uk.ac.tsl.etherington.piculus-impl.jar">
+        <target name="run" depends="uk.ac.tsl.etherington.genomehelper-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
