Added stddev calculations

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,8 @@ javac.classpath=\
     ${libs.biojava3.0.5.classpath}:\
     ${reference.Utils.jar}:\
     ${libs.Biojava1.8.2.classpath}:\
-    ${libs.jtr.classpath}
+    ${libs.jtr.classpath}:\
+    ${libs.apache.commons.math.3.3.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
