Added code to count total nucleotides in fastq file

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.jar=${dist.dir}/GenomeHelper.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.junit-4.9.jar=/Users/ethering/Java/libs/junit-4.9.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -37,14 +38,19 @@ javac.classpath=\
     ${reference.Utils.jar}:\
     ${libs.Biojava1.8.2.classpath}:\
     ${libs.jtr.classpath}:\
-    ${libs.apache.commons.math.3.3.0.classpath}
+    ${libs.apache.commons.math.3.3.0.classpath}:\
+    ${libs.Picard.classpath}:\
+    ${libs.biojava1.8.2.classpath}:\
+    ${libs.biojava3.classpath}:\
+    ${libs.apache.commons.math3.classpath}:\
+    ${file.reference.junit-4.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.7
-javac.target=1.7
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
