Change scientific notation to decimal

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,11 +39,11 @@ javac.classpath=\
     ${libs.Biojava1.8.2.classpath}:\
     ${libs.jtr.classpath}:\
     ${libs.apache.commons.math.3.3.0.classpath}:\
+    ${file.reference.junit-4.9.jar}:\
     ${libs.Picard.classpath}:\
     ${libs.biojava1.8.2.classpath}:\
     ${libs.biojava3.classpath}:\
-    ${libs.apache.commons.math3.classpath}:\
-    ${file.reference.junit-4.9.jar}
+    ${libs.apache.commons.math3.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
