--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,17 +33,13 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.picard.classpath}:\
-    ${libs.biojava3.0.5.classpath}:\
     ${reference.Utils.jar}:\
-    ${libs.Biojava1.8.2.classpath}:\
     ${libs.jtr.classpath}:\
-    ${libs.apache.commons.math.3.3.0.classpath}:\
     ${file.reference.junit-4.9.jar}:\
     ${libs.Picard.classpath}:\
     ${libs.biojava1.8.2.classpath}:\
-    ${libs.biojava3.classpath}:\
-    ${libs.apache.commons.math3.classpath}
+    ${libs.apache.commons.math3.classpath}:\
+    ${libs.biojava3.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
