--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,11 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.Utils.jar}:\
     ${libs.jtr.classpath}:\
-    ${file.reference.junit-4.9.jar}:\
     ${libs.Picard.classpath}:\
     ${libs.biojava1.8.2.classpath}:\
     ${libs.apache.commons.math3.classpath}:\
-    ${libs.biojava3.classpath}
+    ${libs.biojava3.classpath}:\
+    ${file.reference.junit-4.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
