Updated code to use picard-1.130 and HTSJDK

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,7 +27,15 @@ dist.jar=${dist.dir}/GenomeHelper.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.BigWig.jar=/Users/ethering/Java/libs/java-genomics-io/lib/BigWig.jar
+file.reference.commons-lang3-3.1.jar=/Users/ethering/Java/libs/java-genomics-io/lib/commons-lang3-3.1.jar
+file.reference.commons-math3-3.0.jar=/Users/ethering/Java/libs/java-genomics-io/lib/commons-math3-3.0.jar
+file.reference.hamcrest-core-1.1.0.jar=/Users/ethering/Java/libs/java-genomics-io/lib/hamcrest-core-1.1.0.jar
+file.reference.jacocoant.jar=/Users/ethering/Java/libs/java-genomics-io/lib/jacocoant.jar
+file.reference.java-genomics-io.jar=/Users/ethering/Java/libs/java-genomics-io/dist/java-genomics-io.jar
 file.reference.junit-4.9.jar=/Users/ethering/Java/libs/junit-4.9.jar
+file.reference.junit.jar=/Users/ethering/Java/libs/java-genomics-io/lib/junit.jar
+file.reference.log4j-1.2.15.jar=/Users/ethering/Java/libs/java-genomics-io/lib/log4j-1.2.15.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -35,11 +43,19 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.Utils.jar}:\
     ${libs.jtr.classpath}:\
-    ${libs.Picard.classpath}:\
     ${libs.biojava1.8.2.classpath}:\
     ${libs.apache.commons.math3.classpath}:\
     ${libs.biojava3.classpath}:\
-    ${file.reference.junit-4.9.jar}
+    ${file.reference.junit-4.9.jar}:\
+    ${file.reference.BigWig.jar}:\
+    ${file.reference.commons-lang3-3.1.jar}:\
+    ${file.reference.commons-math3-3.0.jar}:\
+    ${file.reference.hamcrest-core-1.1.0.jar}:\
+    ${file.reference.jacocoant.jar}:\
+    ${file.reference.junit.jar}:\
+    ${file.reference.log4j-1.2.15.jar}:\
+    ${file.reference.java-genomics-io.jar}:\
+    ${libs.Picard.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
