--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,7 +55,8 @@ javac.classpath=\
     ${file.reference.junit.jar}:\
     ${file.reference.log4j-1.2.15.jar}:\
     ${file.reference.java-genomics-io.jar}:\
-    ${libs.Picard.classpath}
+    ${libs.Picard.classpath}:\
+    ${libs.commons-cli.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
