Added VCF class

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -89,7 +89,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=uk.ac.tsl.etherington.genomehelper.main.GenomeHelper
+main.class=uk.ac.tsl.etherington.genomehelper.main.GenomeHelper2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
