--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.BigWig.jar=/Users/ethering/Java/libs/java-genomics-io/lib/BigWig.jar
+file.reference.commons-cli-1.2.jar=/Users/ethering/Java/libs/commons-cli-1.2/commons-cli-1.2.jar
 file.reference.commons-lang3-3.1.jar=/Users/ethering/Java/libs/java-genomics-io/lib/commons-lang3-3.1.jar
 file.reference.commons-math3-3.0.jar=/Users/ethering/Java/libs/java-genomics-io/lib/commons-math3-3.0.jar
 file.reference.hamcrest-core-1.1.0.jar=/Users/ethering/Java/libs/java-genomics-io/lib/hamcrest-core-1.1.0.jar
@@ -56,7 +57,7 @@ javac.classpath=\
     ${file.reference.log4j-1.2.15.jar}:\
     ${file.reference.java-genomics-io.jar}:\
     ${libs.Picard.classpath}:\
-    ${libs.commons-cli.classpath}
+    ${file.reference.commons-cli-1.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
