Updated main method

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,6 +43,7 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.Utils.jar}:\
+    ${file.reference.commons-cli-1.2.jar}:\
     ${libs.jtr.classpath}:\
     ${libs.biojava1.8.2.classpath}:\
     ${libs.apache.commons.math3.classpath}:\
@@ -56,8 +57,7 @@ javac.classpath=\
     ${file.reference.junit.jar}:\
     ${file.reference.log4j-1.2.15.jar}:\
     ${file.reference.java-genomics-io.jar}:\
-    ${libs.Picard.classpath}:\
-    ${file.reference.commons-cli-1.2.jar}
+    ${libs.Picard.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -108,5 +108,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.commons-cli-1.2.jar=/Users/ethering/Java/libs/commons-cli-1.2/commons-cli-1.2.jar
 src.dir=src
 test.src.dir=test
