Added code to calculate percentiles

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -56,7 +56,8 @@ javac.classpath=\
     ${file.reference.log4j-1.2.15.jar}:\
     ${file.reference.java-genomics-io.jar}:\
     ${libs.Picard.classpath}:\
-    ${libs.org.apache.commons.cli.classpath}
+    ${libs.org.apache.commons.cli.classpath}:\
+    ${libs.ssj.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
