--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -96,7 +96,7 @@ main.class=uk.ac.tsl.etherington.genomehelper.main.GenomeHelper
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 project.Utils=../Utils
 reference.Utils.jar=${project.Utils}/dist/Utils.jar
 run.classpath=\
