Added GetGenomeStats method

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.BigWig.jar=/Users/ethering/Java/libs/java-genomics-io/lib/BigWig.jar
-file.reference.biojava4-1.0-SNAPSHOT.jar=/Users/ethering/Java/libs/biojava/biojava4/target/biojava4-1.0-SNAPSHOT.jar
+file.reference.biojava-core-4.2.4.jar=/Users/ethering/Java/libs/biojava4/biojava-core-4.2.4.jar
 file.reference.commons-lang3-3.1.jar=/Users/ethering/Java/libs/java-genomics-io/lib/commons-lang3-3.1.jar
 file.reference.commons-math3-3.0.jar=/Users/ethering/Java/libs/java-genomics-io/lib/commons-math3-3.0.jar
 file.reference.hamcrest-core-1.1.0.jar=/Users/ethering/Java/libs/java-genomics-io/lib/hamcrest-core-1.1.0.jar
@@ -59,7 +59,7 @@ javac.classpath=\
     ${libs.Picard.classpath}:\
     ${libs.org.apache.commons.cli.classpath}:\
     ${libs.ssj.classpath}:\
-    ${file.reference.biojava4-1.0-SNAPSHOT.jar}
+    ${file.reference.biojava-core-4.2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
