Formatted GetGenomeStats for Nstats only

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.BigWig.jar=/Users/ethering/Java/libs/java-genomics-io/lib/BigWig.jar
+file.reference.biojava-core-4.2.4-javadoc.jar=/Users/ethering/Java/libs/biojava4/biojava-core-4.2.4-javadoc.jar
+file.reference.biojava-core-4.2.4-sources.jar=/Users/ethering/Java/libs/biojava4/biojava-core-4.2.4-sources.jar
 file.reference.biojava-core-4.2.4.jar=/Users/ethering/Java/libs/biojava4/biojava-core-4.2.4.jar
 file.reference.commons-lang3-3.1.jar=/Users/ethering/Java/libs/java-genomics-io/lib/commons-lang3-3.1.jar
 file.reference.commons-math3-3.0.jar=/Users/ethering/Java/libs/java-genomics-io/lib/commons-math3-3.0.jar
@@ -46,7 +48,6 @@ javac.classpath=\
     ${libs.jtr.classpath}:\
     ${libs.biojava1.8.2.classpath}:\
     ${libs.apache.commons.math3.classpath}:\
-    ${libs.biojava3.classpath}:\
     ${file.reference.junit-4.9.jar}:\
     ${file.reference.BigWig.jar}:\
     ${file.reference.commons-lang3-3.1.jar}:\
@@ -59,6 +60,9 @@ javac.classpath=\
     ${libs.Picard.classpath}:\
     ${libs.org.apache.commons.cli.classpath}:\
     ${libs.ssj.classpath}:\
+    ${libs.biojava3.classpath}:\
+    ${file.reference.biojava-core-4.2.4-javadoc.jar}:\
+    ${file.reference.biojava-core-4.2.4-sources.jar}:\
     ${file.reference.biojava-core-4.2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
